--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-v0-project",
   "version": "1.0.0",
-  "homepage": "https://vanlumban.github.io",
+  "homepage": "https://bodybykishani.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
