--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://bodybykishani.github.io",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && touch out/.nojekyll",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d out --dotfiles"
   },
